<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudoku_solver"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:text="@string/solve"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:paddingHorizontal="24dp"
        android:paddingVertical="15dp"
        android:text="@string/reset"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/recycle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:outlineProvider="background"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/cell_item" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="ExtraText">
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/one"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/one"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/two"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/two"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/three"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/three"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/four"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/four"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/five"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/five"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/six"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/six"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seven"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/seven"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/eight"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/eight"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nine"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/round_button"
            android:text="@string/nine"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>